secondfile/objects/RDS_Access_Circuit_ID__c.object
<CustomObject>
    <description>Premise Details-Premise Data-Circuit and VLAN Details-Access Circuit ID</description>
    <fields>
        <fullName>ASE_Access_Circuit_ID_Serial__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>ASE-Access Circuit ID-Serial</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ATT_Gateway_Circuit_ID__c</fullName>
        <label>ATT Gateway Circuit ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Billing_Effective_Date__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Access Circuit ID-Access Billing Effective Date</description>
        <label>Access Billing Effective Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Circuit_ID__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Access Circuit ID-Access Circuit ID</description>
        <label>Access Circuit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Cloned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates that record was cloned due to VLAN change. It is a technical field not required on page layout.</description>
        <label>Change Cloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Circuit_and_VLAN_Details__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Access Circuit ID</description>
        <label>Circuit and VLAN Details</label>
        <referenceTo>Circuit_and_VLAN_Details__c</referenceTo>
        <relationshipName>Circuit_and_VLAN_Details</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitive_Access_DiscountEffectiveDate__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Access Circuit ID-Competitive Access DiscountEffectiveDate</description>
        <label>Competitive Access DiscountEffectiveDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Gateway_Circuit_ID__c</fullName>
        <label>EC Gateway Circuit ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupPortID_Internal__c</fullName>
        <formula>IF(
( Circuit_and_VLAN_Details__r.Premise__r.Transport_Type__c=&apos;T1&apos;||
Circuit_and_VLAN_Details__r.Premise__r.Transport_Type__c =&apos;nT1&apos;),  Circuit_and_VLAN_Details__r.Premise__r.GroupPortID_Auto__c, &apos;&apos;)</formula>
        <label>GroupPortID_Internal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupPortID__c</fullName>
        <description>copy of Access Circuit ID- GroupPortID_internal</description>
        <label>GroupPortID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INSTAR_Order_Number_Formula__c</fullName>
        <formula>IF( Circuit_and_VLAN_Details__r.Premise__r.Service_Type__c != &apos;ASE&apos;, Circuit_and_VLAN_Details__r.Premise__r.Premise_Number__c + Circuit_and_VLAN_Details__r.Premise__r.INSTAR_OrderNumber_Serial__c,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INSTAR Order Number-Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INSTAR_Order_Number__c</fullName>
        <label>INSTAR Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAI_Auto__c</fullName>
        <description>LAI</description>
        <displayFormat>E{0000000000}</displayFormat>
        <label>LAI Auto</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LAI_Obsolete__c</fullName>
        <description>Changing the field name as part of LAI hot fix-092214</description>
        <formula>IF(Circuit_and_VLAN_Details__r.Premise__r.Transport_Type__c = &apos;nT1&apos;||Circuit_and_VLAN_Details__r.Premise__r.Transport_Type__c = &apos;T1&apos;,LAI_Auto__c,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LAI Obsolete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAI__c</fullName>
        <description>New text field replacing the existing formula field for LAI- hot fix</description>
        <label>LAI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Type__c</fullName>
        <description>This is a technical field to indicate that record has been created due to MACD Disconnect. Not required on page layout.</description>
        <label>MACD Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLPPP_Link_Number__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Access Circuit ID-MLPPP Link Number</description>
        <label>MLPPP Link Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_of_Clone__c</fullName>
        <description>This is a technical field to cpature Id of Access Ckt from which the record was cloned. Not required on Page layout.</description>
        <label>Master of Clone</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Name__c</fullName>
        <label>Parent Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortID_Auto__c</fullName>
        <displayFormat>PORT00{0000000000}</displayFormat>
        <label>PortID_Auto</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PortID__c</fullName>
        <description>copy of Access Circuit ID- PortID_Auto</description>
        <label>PortID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Service_Type__c</fullName>
        <description>Technical Field to get Service type of related Premise. Not required on Page Layout.</description>
        <formula>Circuit_and_VLAN_Details__r.Premise__r.Service_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premise Service Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_DealHashId__c</fullName>
        <formula>Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RDS-DealHashId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_PremiseDetailID__c</fullName>
        <formula>Circuit_and_VLAN_Details__r.Premise__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RDS-PremiseDetailID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Premise_Number__c</fullName>
        <description>This is a technical field to be used for VLAN Information derivations. Not required on Page Layout.</description>
        <formula>Circuit_and_VLAN_Details__r.Premise__r.Premise_Number__c</formula>
        <label>RDS-Premise Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USO_Number__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-Access Circuit ID-USONumber</description>
        <label>USO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>circuitStatus__c</fullName>
        <description>Custom object to store the circuit status</description>
        <label>circuitStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RDS-Access Circuit ID</label>
    <listViews>
        <fullName>All</fullName>
        <columns>PortID__c</columns>
        <columns>PortID_Auto__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RDS_Premise_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>contains</operation>
            <value>Niyati</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AC -{0000000}</displayFormat>
        <label>Access Circuit ID Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDS-Access Circuit ID</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Edit_Expired_Lapsed</fullName>
        <active>false</active>
        <description>Edit Expired Lapsed</description>
        <errorConditionFormula>AND(OR(if(Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.Edit_Expired_Date__c&lt;NOW(),true,false),ISPICKVAL( Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.RDS_object_status__c ,&quot;Review completed&quot;)),!ISCHANGED( Access_Circuit_ID__c),!ISCHANGED( USO_Number__c),
		$Profile.Name &lt;&gt;&quot;SI_API User&quot;,
		$Profile.Name &lt;&gt;&quot;System Administrator&quot;,
$Profile.Name &lt;&gt;&quot;SI_EBM Admin&quot;,
$Profile.Name &lt;&gt;&quot;SI_EBM_DEV_OPS&quot;)</errorConditionFormula>
        <errorMessage>Edit Time has elapsed . Please contact EBM Admin</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Gateway_fields_locked_after_Deal_Hash</fullName>
        <active>true</active>
        <description>EC Gateway Circuit ID and ATT Gateway Circuit ID on Access Circuit Id should be locked after Deal Hash creation</description>
        <errorConditionFormula>(Circuit_and_VLAN_Details__r.Premise__r.Sent_to_Grid__c  = True) &amp;&amp; (ISCHANGED(ATT_Gateway_Circuit_ID__c) || ISCHANGED(EC_Gateway_Circuit_ID__c)) &amp;&amp; $Profile.Name &lt;&gt; &apos;System Administrator&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;SI_API User&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;SI_EBM_DEV_OPS&apos; &amp;&amp;  NOT( ISNEW() )</errorConditionFormula>
        <errorMessage>Gateway Circuit ID field cannot be edited as the related Premise is already sent to grid.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lookup_to_CVLAN_cannot_be_updated</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Circuit_and_VLAN_Details__c )</errorConditionFormula>
        <errorMessage>The reference to Circuit and VLAN Details cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Creation_for_Non_MACD_D_AccCkt</fullName>
        <active>true</active>
        <description>This validation rule will prevent creation of records for SI EBM Admin and EBM DEV OPs profile when the record is not of MACD Disconnect type</description>
        <errorConditionFormula>AND(MACD_Type__c &lt;&gt; &apos;D&apos;, MACD_Type__c &lt;&gt; &apos;C&apos;, 
OR($Profile.Name = &apos;SI_EBM_DEV_OPS&apos;,$Profile.Name = &apos;SI_EBM Admin&apos;), 
ISNEW() )</errorConditionFormula>
        <errorMessage>You do not have permission to create a new RDS-Access Circuit ID record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Updates_for_DevOps_AccCktId</fullName>
        <active>true</active>
        <description>EBM DEV Ops Profile users should not be able to update following fields under RDS-Access Circuit Id object :
MLPPP Link Number
LAI</description>
        <errorConditionFormula>AND(NOT(ISNEW()),
$Profile.Name = &apos;SI_EBM_DEV_OPS&apos;,
OR(ISCHANGED(MLPPP_Link_Number__c),ISCHANGED(LAI__c)))</errorConditionFormula>
        <errorMessage>Your profile does not have permission to edit the following fields on this object : MLPPP Link Number, LAI</errorMessage>
    </validationRules>
</CustomObject>